--- a/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Views/Shared/_Layout.cshtml
+++ b/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>EXAMEN UNIDAD I Flores Melendez Andree Sebastian</title>
+    <title>LeyvaCars</title>
     <link href="~/Assets/css/bootstrap.css" rel="stylesheet" />
     <link href="~/Assets/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Font Awesome -->
