--- a/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Views/Shared/_Layout.cshtml
+++ b/Proyecto_Leyva_Cars/Proyecto_Leyva_Cars/Views/Shared/_Layout.cshtml
@@ -222,7 +222,7 @@
                         <a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Productos</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Productos")">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contactanos</a>
